3-apps/uptime-kuma/kustomize/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.uptime-kuma.russellhost.org`) 
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
    - match: Host(`uptime-kuma.russellhost.org`) 
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
      middlewares:
        - name: default-headers
  tls:
    secretName: russellhost-tls
